[gd_scene load_steps=3 format=3 uid="uid://cij06vhna703f"]

[ext_resource type="Script" uid="uid://dmbi15ig77c6r" path="res://levels/objects/bubble_collectible.gd" id="1_wcy0w"]

[sub_resource type="Resource" id="Resource_gmt2x"]
metadata/__load_path__ = "res://bubble.tscn"

[node name="BubbleCollectible" type="Area2D" groups=["LevelPassCollectible"]]
linear_damp = 0.4
script = ExtResource("1_wcy0w")
color = Color(0.65098, 0.611765, 1, 1)

[node name="BubbleCollision" parent="."]
unique_name_in_owner = true
scale = Vector2(0.6, 0.6)
base_scale = 0.6
wobble_on_ready = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
